--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@electron/remote": "^1.1.0",
     "bulma-fluent": "^0.4.3",
+    "hotkeys-js": "^3.8.7",
     "material-design-icons": "^3.0.1",
     "vue": "^2.6.12",
     "vue-electron": "^1.0.6",
